# maxim

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  NOTIFICATIONS.hbs  NOTIFICATIONS.md  README.md  about.toml  deny.toml  modoc.config
examples/: hello_world.rs  montecarlo.rs  philosophers.rs
src/: actors.rs  cluster.rs  executor.rs  lib.rs  message.rs  prelude.rs  secc.rs  system.rs
src/executor/: thread_pool.rs
src/system/: system_actor.rs
