[package]
name = "conjecture"
version = "0.1.0-alpha.0"
edition = "2018"
authors = [
    "Conjecture Contributors", 
    "Zicklag <zicklag@katharostech.com>",
    "Robert Simmons Jr. MSc.",
    "Khionu Sybiern <dev@khionu.net>"
]
license = "Apache-2.0"
homepage = "https://github.com/katharostech/conjecture"
repository = "https://github.com/katharostech/conjecture"
documentation = "https://docs.rs/conjecture"
readme = "README.md"
description = """
Implements a highly-scalable and ergonomic actor system for Rust based on the 
best of Erlang / Elixir and Akka. A fork of the Axiom actor framework.
"""

keywords = [
    "Actor", 
	"Actors", 
	"Akka", 
	"Erlang", 
	"Elixir"
]

categories = [
    "asynchronous",
    "concurrency"
]

exclude = [
    "/.gitignore",
    "/.git",
    "/.github",
    "/.travis.yml",
    "/modoc.config",
]

[features]
default = ["actor-pool"]
actor-pool = ["rand", "rand_xoshiro"]

[badges]
# We won't be using Travis in a bit
#travis-ci = { repository = "katharostech/conjecture" }
is-it-maintained-issue-resolution = { repository = "katharostech/conjecture" }
is-it-maintained-open-issues  = { repository = "katharostech/conjecture" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
env_logger = "^0.6.2"
rand = "^0.7"
serde_json = "^1.0.40"

[dependencies]
bincode = "^1.1.4"
dashmap = "^1.0.3"
futures = "^0.3.1"
num_cpus = "^1.10.1"
log = "^0.4"
once_cell = "^1.0.2"
secc = "^0.0.10"
serde = { version = "^1.0.97", features = ["derive", "rc"] }
uuid = { version = "^0.7.4", features = ["serde", "v4"]}
rand = { version =  "0.7.3", optional = true }
rand_xoshiro = { version = "0.4.0", optional = true }

